libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-tuple-type.jsonc
//@ run: fail
//@ description: any tuple with a type annotation should fail
[
  "::kernel::special_form::use",
  "::core",
  { "#tuple": ["::core::math::sub"], "#type": "Number" },
  //~^ ERROR expected a simple name to import
  //~| ERROR type annotations are not allowed on the import list
  { "#literal": 0 }
]
